# CombiBench

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  new_data.ipynb  pyproject.toml
docs/: index.html  leaderboard.html  results.json
evaluation/: basic_evaluator.py  cli.py  constant.py  one_stage_verify.py  online_one_stage.py  online_two_stage.py  util.py
evaluation/client/: lean_client.py  llm_client.py
evaluation/config/: geometry_template.json5  template.json5
evaluation/evaluator/: basic_evaluator.py  online_one_stage.py  online_two_stage.py
evaluation/verifier/: one_stage_verify.py
lean/CombiBench/: README.md  metadata.csv
lean/CombiBench/with_solution/: apmo_1991_p2_sol.lean  apmo_2023_p1_sol.lean  balticway_2015_p7_sol.lean  brualdi_ch10_34_sol.lean  brualdi_ch10_60_sol.lean  brualdi_ch11_5_sol.lean  brualdi_ch12_37_sol.lean  brualdi_ch12_62_sol.lean  brualdi_ch13_10_sol.lean  brualdi_ch13_6_sol.lean  brualdi_ch13_9_sol.lean  brualdi_ch14_26_sol.lean  brualdi_ch1_10_sol.lean  brualdi_ch1_5_sol.lean  brualdi_ch2_6_sol.lean  brualdi_ch3_18_sol.lean  brualdi_ch4_59_sol.lean  brualdi_ch4_9_sol.lean  brualdi_ch6_11_sol.lean  brualdi_ch6_9_sol.lean  brualdi_ch9_13_sol.lean  egmo_2022_p5_sol.lean  hackmath_3_sol.lean  hackmath_6_sol.lean  hackmath_8_sol.lean  imo_2000_p4_sol.lean  imo_2005_p6_sol.lean  imo_2007_p3_sol.lean  imo_2008_p5_sol.lean  imo_2010_p5_sol.lean  imo_2011_p2_sol.lean  imo_2012_p3_sol.lean  imo_2013_p2_sol.lean  imo_2014_p2_sol.lean  imo_2014_p6_sol.lean  imo_2015_p1_sol.lean  imo_2017_p3_sol.lean  (+8 more)
test/: test_lean_server.py
